IBM ACE - EKS/5_1_appconn-dashboard-ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: appconn-dashboard
  namespace: ibm-ace
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing   
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
    - host: appconn-dashboard.cloudaise.com
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: appconn-dashboard-dash
              port:
                number: 8300
